Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59835

QLineSeries loses mouse events if for instance QBarSeries added after

    XMLWordPrintable

Details

    Description

      If QLineSeries added first and then QBarSeries, the QLineSeries (actually LineChartItem) doesn't receive mouse events anymore. If added other way, first QBarSeries and then QLineSeries, then both receive mouse event.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            misalmel Mika Salmela
            misalmel Mika Salmela
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes