Block mouse events for several charts items

Block mouse events for abstractbarchartitem, boxblotchartitem and
candlestickchartitem.

Task-number: QTBUG-59835
Change-Id: I065b3429135a8c1195360a961271b287a72d2197
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>