src/charts/candlestickchart/candlestickchartitem.cpp
@@ -45,6 +45,7 @@ CandlestickChartItem::CandlestickChartItem(QCandlestickSeries *series, QGraphics
       m_timePeriod(0.0),
       m_animation(nullptr)
 {
+    setAcceptedMouseButtons(0);
     connect(series, SIGNAL(candlestickSetsAdded(QList<QCandlestickSet *>)),
             this, SLOT(handleCandlestickSetsAdd(QList<QCandlestickSet *>)));
     connect(series, SIGNAL(candlestickSetsRemoved(QList<QCandlestickSet *>)),
